testsuite/tests/typecheck/should_fail/AssocTyDef01.stderr

AssocTyDef01.hs:9:10: error: [GHC-54721]
    ‘OtherType’ is not a (visible) associated type of class ‘Cls’
